[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/units/enemy_soldier.png" type="Texture" id=1]
[ext_resource path="res://enemy_units/EnemySoldier.gd" type="Script" id=2]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/GunHandler.tscn" type="PackedScene" id=4]
[ext_resource path="res://units_assets/Range.tscn" type="PackedScene" id=5]
[ext_resource path="res://units_assets/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://units_assets/AI.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.7576

[node name="EnemySoldier" type="KinematicBody2D" groups=[
"enemy_units",
]]
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemy_units",
]]
visible = false
shape = SubResource( 1 )

[node name="GunHandler" parent="." instance=ExtResource( 4 )]
position = Vector2( 7.41624, 0 )

[node name="Health" parent="." instance=ExtResource( 6 )]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Range" parent="AI" instance=ExtResource( 5 )]
collision_layer = 32
[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
[connection signal="look" from="AI" to="." method="_on_AI_look"]
[connection signal="shoot" from="AI" to="." method="_on_AI_shoot"]
[connection signal="body_entered" from="AI/Range" to="AI" method="_on_Range_body_entered"]
[connection signal="body_exited" from="AI/Range" to="AI" method="_on_Range_body_exited"]
